# statiqa

./: .gitignore  Dockerfile  README.md  action.yaml  pyproject.toml
.github/workflows/: container.yaml  test.yaml
statiqa/: __main__.py  cli.py  renderer.py
tests/: test_renderer.py
